Configure absolute imports with @ alias for cleaner imports

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
       "^.+\\.ts$": ["ts-jest", {
         "tsconfig": "tsconfig.test.json"
       }]
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
     }
   }
 }
