--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.5",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
@@ -27,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
@@ -34,15 +38,16 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testMatch": ["**/__tests__/**/*.test.ts", "**/*.test.ts"],
+    "testEnvironment": "jsdom",
+    "testMatch": ["**/__tests__/**/*.test.ts", "**/*.test.ts", "**/__tests__/**/*.test.tsx", "**/*.test.tsx"],
     "transform": {
-      "^.+\\.ts$": ["ts-jest", {
+      "^.+\\.(ts|tsx)$": ["ts-jest", {
         "tsconfig": "tsconfig.test.json"
       }]
     },
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
-    }
+    },
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"]
   }
 }
