cleanup; added DI using React Context;

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,5 +29,5 @@
     "noUncheckedSideEffectImports": true
   },
   "include": ["src"],
-  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx", "**/*.spec.ts", "**/*.spec.tsx"]
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
 }
